src/test/deca/syntax/valid/created/parser/random_1000_TOKENS.deca.res
random_1000_TOKENS.deca:8:2: no viable alternative at input '>'
