src/test/deca/syntax/invalid/created/parser/random_1000_TOKENS.deca.res
random_1000_TOKENS.deca:155:53: token recognition error at: '�'
